# bridge

./: .clang-format  .clangd  .gitignore  LICENSE  README.md  compile_flags.txt
desktop/: CMakeLists.txt  build.py
desktop/app/: main.cpp
desktop/app/sockets/: SerialPort.cpp  UDPSocket.cpp
desktop/include/bridge/: ring_buffer.hpp
desktop/include/bridge/sockets/: SerialPort.hpp  UDPSocket.hpp
desktop/include/structs/: states.hpp
esp/controller/: platformio.ini
esp/controller/src/: main.cpp
shared/: packet.hpp  payloads.hpp
shared/payloads/: sim_payloads.hpp
tests/: build_packet.py  udpsender.py
